feat(collections): add pin functionality for collections and update related services
- Added pin functionality for collections to allow users to pin/unpin collections on extension and mobile
- Updated related services and mutations to support pinning
- Modified schema to include pinned collections
- Enhanced collection header UI with pin/unpin options

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -212,4 +212,9 @@
 			transform: scale(1.5) translate(100px);
 		}
 	}
+
+	/* toast region custom style */
+	div[role="region"] {
+		@apply !z-[9999];
+	}
 }
